--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Flash cards</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                     <div class="cartao__conteudo__resposta">
                         RESPOSTA - escrever a resposta
                     </div>
-                    
+
                 </div>
             </article>
 
