--- a/index.html
+++ b/index.html
@@ -16,22 +16,23 @@
 <body>
     <main>
         <section id="container">
+            <!--
             <article class="cartao">
                 <div class="cartao__conteudo">
 
                     <h3>CATEGORIA</h3>
 
                     <div class="cartao__conteudo__pergunta">
-                        PERGUNTA - escrever a pergunta
+                       <p>PERGUNTA - escrever a pergunta</p> 
                     </div>
 
                     <div class="cartao__conteudo__resposta">
-                        RESPOSTA - escrever a resposta
+                       <p>RESPOSTA - escrever a resposta</p>
                     </div>
 
                 </div>
             </article>
-
+           -->
         </section>
 
 
